# waybar-manager

./: .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.test  README.md  SECURITY.md  dist-workspace.toml  release-please-config.json  release-plz.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  release-please.yml  release-plz.yml  release.yml  security.yml
aur/: PKGBUILD
benches/: filtering.rs
crates/barforge-registry-types/: CHANGELOG.md  Cargo.toml
crates/barforge-registry-types/bindings/: Author.ts  CategoryInfo.ts  ModuleCategory.ts  ModuleVersion.ts  RegistryIndex.ts  RegistryModule.ts  ReviewUser.ts
crates/barforge-registry-types/crates/barforge-registry-types/: CHANGELOG.md
crates/barforge-registry-types/src/: category.rs  lib.rs  module.rs  registry.rs
crates/waybar-registry-types/: CHANGELOG.md  Cargo.toml
crates/waybar-registry-types/bindings/: AuthorProfile.ts  ModuleUuid.ts  Review.ts  ReviewsResponse.ts
crates/waybar-registry-types/src/: author.rs  registry.rs  review.rs
data/: dev.barforge.Barforge.desktop  dev.barforge.Barforge.metainfo.xml  org.waybar.Manager.desktop  org.waybar.Manager.metainfo.xml
flatpak/: dev.barforge.Barforge.yml  org.waybar.Manager.yml
src/: cli.rs  error.rs  icons.rs  lib.rs  main.rs  tasks.rs  testing.rs  tray.rs
src/app/: message.rs  mod.rs  state.rs
src/app/handlers/: async_results.rs  browse.rs  installed.rs  mod.rs  navigation.rs  security.rs
src/domain/: category.rs  installed.rs  mod.rs  module.rs  registry.rs
src/security/: archive_extraction.rs  mod.rs  path_validation.rs  revocation.rs  sandbox.rs  script_execution.rs  script_inspection.rs  url_validation.rs  verification.rs
src/services/: dependency_checker.rs  mod.rs  module_installer.rs  module_service.rs  omarchy_theme.rs  package_config.rs  paths.rs  preferences.rs  registry_service.rs  settings.rs  waybar_config.rs  waybar_version.rs
src/tasks/: mod.rs  module.rs  registry.rs  watchers.rs
src/theme/: button.rs  checkbox.rs  container.rs  mod.rs  palette.rs  pick_list.rs
src/widget/: author_card.rs  confirmation_dialog.rs  empty_state.rs  mod.rs  module_card.rs  module_detail_screen.rs  module_row.rs  module_table.rs  notification.rs  preferences_modal.rs  settings_screen.rs  sidebar.rs  skeleton_card.rs
tests/integration/: helpers.rs  module_lifecycle_tests.rs  registry_tests.rs
