[workspace]
members = ["crates/waybar-registry-types"]
resolver = "2"

[package]
name = "waybar-manager"
version = "0.2.2"
edition = "2024"
description = "Waybar Manager - browse, install, and manage waybar modules"
license = "GPL-3.0-or-later"
authors = ["jtaw"]
repository = "https://github.com/jtaw5649/waybar-manager"
homepage = "https://github.com/jtaw5649/waybar-manager"
readme = "README.md"

[[bin]]
name = "waybar-manager-bin"
path = "src/main.rs"

[dependencies]
waybar-registry-types = { path = "crates/waybar-registry-types" }

# UI Framework
iced = { version = "0.14", features = ["tokio", "svg", "image", "advanced"] }
iced_aw = { version = "0.13", default-features = false, features = ["card", "wrap"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.28", features = ["serde", "cst"] }
toml = "0.8"

# Async/HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# Archive extraction
flate2 = "1"
tar = "0.4"

# File watching
notify = "7"

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
open = "5"
url = "2"

# System tray (D-Bus StatusNotifierItem)
ksni = { version = "0.3.2", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
