[workspace]
members = ["crates/barforge-registry-types"]
resolver = "2"

[package]
name = "barforge"
version = "0.5.0"
edition = "2024"
description = "Barforge - browse, install, and manage Waybar modules"
license = "GPL-3.0-or-later"
authors = ["jtaw"]
repository = "https://github.com/jtaw5649/barforge-app"
homepage = "https://github.com/jtaw5649/barforge-app"
readme = "README.md"

[[bin]]
name = "barforge"
path = "src/main.rs"

[dependencies]
barforge-registry-types = { path = "crates/barforge-registry-types" }

# UI Framework
iced = { version = "0.14", features = ["tokio", "svg", "image", "advanced", "markdown"] }
iced_aw = { version = "0.13", default-features = false, features = ["card", "wrap"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.28", features = ["serde", "cst"] }
toml = "0.9"

# Async/HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# Archive extraction
flate2 = "1"
tar = "0.4"

# File watching
notify = "7"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
open = "5"
url = "2"
urlencoding = "2.1"
shellexpand = "3.1"
regex = "1.11"
futures-util = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Security
landlock = "0.4"
minisign-verify = "0.2"
sha2 = "0.10"
which = "8.0"
sigstore = { version = "0.13", optional = true }

# System tray (D-Bus StatusNotifierItem)
ksni = { version = "0.3.3", features = ["blocking"] }

[features]
default = []
sigstore = ["dep:sigstore"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "filtering"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
