[package]
name = "barforge-registry-types"
version = "0.2.1"
edition = "2024"
description = "Shared types for Barforge app and registry API"
license = "GPL-3.0-or-later"
authors = ["jtaw"]
repository = "https://github.com/jtaw5649/barforge-app"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "11", features = ["chrono-impl", "no-serde-warnings"] }

[dev-dependencies]
serde_json = "1.0"
