[package]
name = "waybar-registry-types"
version = "0.1.0"
edition = "2024"
description = "Shared types for waybar-manager and waybar-registry-api"
license = "GPL-3.0-or-later"
authors = ["jtaw"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
semver = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
ts-rs = { version = "11", features = ["chrono-impl"] }

[dev-dependencies]
serde_json = "1.0"
